--- a/css/base.css
+++ b/css/base.css
@@ -1,14 +1,106 @@
 :root {
-    --color-primary: #A53DFF;
-    --color-secondary: #132238;
-    --color-accent: #556070;
-    --color-background: #ffffff;
+  --color-main: #0a1128;
+  --color-primary: #ffffff;
+  --color-secondary: #ee9b00;
+  --color-alt: #e6d9d9;
+  /* --color-accent: #f5f5f5; */
+  --color-background: #001219;
+  --font-primary: "Raleway", sans-serif;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: var(--color-background);
+  background-color: var(--color-background);
+  color: var(--color-primary);
+  margin: 0;
+  font-family: var(--font-primary);
+}
+
+.alt-color {
+  background-color: var(--color-main);
+}
+
+.padding-global {
+  padding: 5rem 8%;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-primary);
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 80px;
+  padding-right: 80px;
+  /* background-color: var(--color-main); */
+  color: var(--color-primary);
+}
+
+ul {
+  list-style: none;
+}
+
+.nav-pages {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-item {
+  padding: 1rem 1rem;
+}
+
+.nav-bar h1 {
+  margin: 0;
+}
+
+.nav-bar [class*="fa-"] {
+  font-size: 150%;
+  color: var(--color-secondary);
+}
+
+.resume-button {
+  background-color: #bb3e03;
+  color: var(--color-primary);
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 0.5rem;
+}
+
+.gradient {
+  background: linear-gradient(
+    90deg,
+    rgba(254, 119, 249, 1) 0%,
+    rgba(9, 3, 101, 1) 100%
+  );
+  height: 2px;
+}
+
+footer {
+  text-align: center;
+}
+
+.footer-list {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+.footer-item {
+  padding-left: 1.5rem;
+}
+
+.footer-item [class*="fa-"] {
+  font-size: 200%;
+  color: var(--color-secondary);
 }
