--- a/css/index.css
+++ b/css/index.css
@@ -48,8 +48,17 @@
   padding: 0;
 }
 
+.technologies h3 {
+  margin: 0;
+  padding-bottom: 3rem;
+}
+
 .technologies-list li {
-  padding-right: 20px;
+  padding-right: 30px;
+}
+
+.technologies-list .check {
+  padding-right: 8px;
 }
 
 #projects h2 {
@@ -60,6 +69,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding-top: 2rem;
+  margin-bottom: 3rem;
 }
 
 .project-block img {
@@ -94,4 +104,8 @@
 
 .contact-block h2 {
   margin: 0;
+}
+
+.text h4 {
+  color: var(--color-secondary);
 }
