--- a/css/index.css
+++ b/css/index.css
@@ -25,17 +25,6 @@
   font-size: 4rem;
 }
 
-.about {
-  text-align: center;
-  width: 600px;
-  margin: 0 auto;
-  color: var(--color-primary);
-}
-
-.about p {
-  margin: 0 auto;
-}
-
 .technologies {
   text-align: center;
   background-color: var(--color-main);
@@ -88,8 +77,8 @@
   position: absolute;
   top: 15px;
   left: 15px;
-  width: 450px;
-  height: 270px;
+  width: 100%;
+  height: 100%;
   /* background-color: var(--color-secondary); */
   border: 2px solid var(--color-secondary);
   border-radius: 20px;
@@ -108,4 +97,19 @@
 
 .text h4 {
   color: var(--color-secondary);
+}
+
+/* About Page Styles */
+.about img {
+  border-radius: 20px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 3rem;
+}
+
+.about-text p {
+  line-height: 1.5;
 }
