--- a/css/index.css
+++ b/css/index.css
@@ -77,8 +77,8 @@
   position: absolute;
   top: 15px;
   left: 15px;
-  width: 100%;
-  height: 100%;
+  width: 470px;
+  height: 270px;
   /* background-color: var(--color-secondary); */
   border: 2px solid var(--color-secondary);
   border-radius: 20px;
@@ -112,4 +112,22 @@
 
 .about-text p {
   line-height: 1.5;
+}
+
+.image-wrapper-about {
+  position: relative;
+  display: inline-block;
+}
+
+.image-wrapper-about::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 100%;
+  height: 100%;
+  /* background-color: var(--color-secondary); */
+  border: 2px solid var(--color-secondary);
+  border-radius: 20px;
+  z-index: -1;
 }
