--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,7 @@
   grid-template-columns: 1fr 1fr;
   padding-top: 2rem;
   margin-bottom: 3rem;
+  grid-column-gap: 3rem;
 }
 
 .project-block img {
