--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,20 @@
   grid-column-gap: 3rem;
 }
 
+.project-block-reverse {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 2rem;
+  margin-bottom: 3rem;
+  grid-column-gap: 3rem;
+}
+
+.project-block-reverse img {
+  width: 450px;
+  height: 270px;
+  border-radius: 20px;
+}
+
 .project-block img {
   width: 450px;
   height: 270px;
@@ -131,4 +145,14 @@
   border: 2px solid var(--color-secondary);
   border-radius: 20px;
   z-index: -1;
+}
+
+@media (max-width: 860px) {
+  .project-block {
+    grid-template-columns: 1fr;
+  }
+
+  .project-block-reverse {
+    grid-template-columns: 1fr;
+  }
 }
